Update for compatibility
getFirst() -> get(0)